# palleteedit

./: CMakeLists.txt  README.md
src/: actions.cpp  actions.h  globals.h  main.cpp  pallete.cpp  pallete.h  redrawscreen.cpp  redrawscreen.h
